--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="Buvana_Photo.jpg" alt="Buvana R" />
+                    <img src="image.png" alt="Buvana R" />
                 </div>
             </div>
         </div>
